src/app2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: nginx:1.14.2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: volume
          configMap:
            name: app2-cfg
